// Copyright 2016 Prometheus Team
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package generic;


message Sample {
  optional double value = 1;
  optional int64 timestamp_ms = 2;
}

message LabelPair {
  optional string name  = 1;
  optional string value = 2;
}

message TimeSeries {
  optional string name = 1;
  repeated LabelPair labels = 2;
  // Sorted by time, oldest sample first.
  repeated Sample samples = 3;
}

message GenericWriteRequest {
  repeated TimeSeries timeseries = 1;
}

enum MatchType {
  EQUAL = 0;
  NOT_EQUAL = 1;
  REGEX_MATCH = 2;
  REGEX_NO_MATCH = 3;
}

message LabelMatcher {
  optional MatchType type = 1;
  optional string name = 2;
  optional string value = 3;
}

message GenericReadRequest {
  optional int64 start_timestamp_ms = 1;
  optional int64 end_timestamp_ms = 2;
  repeated LabelMatcher matchers = 3;
}

message GenericReadResponse {
  repeated TimeSeries timeseries = 1;
}

message GenericLabelValuesRequest {
  optional string label_name = 1;
}

message GenericLabelValuesResponse {
  repeated string label_values = 1;
}